--- a/src/workshop_jafx_jdbc/SellerList.fxml
+++ b/src/workshop_jafx_jdbc/SellerList.fxml
@@ -34,8 +34,8 @@
             <TableColumn fx:id="tableColumnEmail" prefWidth="75.0" text="Email" />
             <TableColumn fx:id="tableColumnBirthDate" prefWidth="75.0" text="Birth Date" />
             <TableColumn fx:id="tableColumnBaseSalary" prefWidth="75.0" text="Base Salary" />
-            <TableColumn prefWidth="49.0" />
-            <TableColumn prefWidth="75.0" />
+            <TableColumn fx:id="tableColumnEdit" prefWidth="49.0" />
+            <TableColumn fx:id="tableColumnRemove" prefWidth="75.0" />
         </columns>
       </TableView>
    </children>
